--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
   "version": 2,
+  "name": "bancheck",
   "builds": [
     {
-      "src": "server.js",
+      "src": "./server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "/"
     }
   ]
 }
